<resources>
    <string name="app_name">TodoApp</string>
    <string name="priority_low">LOW</string>
    <string name="priority_regular">Regular</string>
    <string name="priority_high">HIGH</string>
    <string name="task_name">Task Name</string>
    <string name="priority">Priority</string>
    <string name="priority_low_select">Low</string>
    <string name="priority_regular_select">Regular</string>
    <string name="priority_high_select">High</string>
    <string name="set_due_date">Set due date:</string>
    <string name="due_date_placeholder">xx/xx/xxxx</string>
    <string name="created_at">Created at:</string>
    <string name="updated_at">Updated at:</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="add_item">Add Item</string>
    <string name="due_date_short_placeholder">xx/xx</string>
    <string name="edit_caps">EDIT</string>
    <string name="delete_caps">DELETE</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_sort">Sort</string>
    <string name="sort_a_to_z">A to Z</string>
    <string name="sort_z_to_a">Z to A</string>
    <string name="sort_newest_first">Newest first</string>
    <string name="sort_oldest_first">Oldest first</string>
    <string name="sort_important">Important</string>
    <string name="sort_unimportant">Unimportant</string>
    <string name="confirm_delete_todo">Do you really want to delete this item?</string>
    <string name="delete_todo_title">"Delete: "</string>
</resources>
