<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.emma_baumstarck.todoapp.EditActivity">

    <include
        layout="@layout/toolbar_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/include" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/include"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/task_name"
            android:id="@+id/taskNameView"
            android:layout_below="@+id/include"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/widget_vertical_spacing" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/taskNameText"
            android:layout_below="@+id/taskNameView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/tiny_margin"
            android:layout_marginTop="@dimen/widget_vertical_spacing"
            android:background="@color/colorRule" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/priority"
            android:id="@+id/textView3"
            android:layout_below="@+id/taskNameText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/widget_vertical_spacing" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/textView"
            android:orientation="horizontal"
            android:onClick="onPriorityRadioClicked">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority_low_select"
                android:id="@+id/priorityLowRadio"
                android:checked="false"
                android:buttonTint="@color/colorRule" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority_regular_select"
                android:id="@+id/priorityRegularRadio"
                android:checked="true"
                android:buttonTint="@color/colorRule" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority_high_select"
                android:id="@+id/priorityHighRadio"
                android:checked="false"
                android:buttonTint="@color/colorRule" />
        </RadioGroup>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/tiny_margin"
            android:layout_marginTop="@dimen/widget_vertical_spacing"
            android:background="@color/colorRule" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/widget_vertical_spacing">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_due_date"
                android:id="@+id/dueDateCheckBox" />

            <Button
                android:id="@+id/dueDateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/due_date_placeholder"
                android:onClick="onDueDateClick" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/widget_vertical_spacing">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/created_at"
                android:id="@+id/textView"
                android:layout_above="@+id/textView2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="@dimen/widget_vertical_spacing"
                android:width="@dimen/date_display_width" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/taskCreatedAtView"
                android:layout_alignTop="@+id/textView"
                android:layout_toRightOf="@+id/taskNameView"
                android:layout_toEndOf="@+id/taskNameView" />
            </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/updated_at"
                android:id="@+id/textView2"
                android:layout_above="@+id/cancelButton"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="@dimen/widget_vertical_spacing"
                android:width="@dimen/date_display_width" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/taskUpdatedAtView"
                android:layout_alignTop="@+id/textView2"
                android:layout_alignLeft="@+id/taskCreatedAtView"
                android:layout_alignStart="@+id/taskCreatedAtView" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/cancelButton"
                android:nestedScrollingEnabled="true"
                android:onClick="onCancelButton"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:id="@+id/updateButton"
                android:onClick="onUpdateButton"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
