<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_height="@dimen/todo_height"
    android:layout_width="fill_parent">

    <TextView
        android:id="@+id/leftLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="@dimen/todo_big_text"
        android:singleLine="true"
        android:ellipsize="end"
        android:width="@dimen/todo_text_width"
        android:gravity="start"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/deleteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_caps"
        android:textSize="@dimen/todo_small_text"
        android:textColor="@color/colorRed"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/small_margin"
        android:visibility="invisible"
        android:layout_marginRight="@dimen/todo_delete_margin"
        android:textStyle="bold"
        android:clickable="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/dueDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_date_short_placeholder"
        android:textSize="@dimen/todo_small_text"
        android:layout_alignParentRight="true"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginRight="@dimen/todo_due_margin"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/editLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_caps"
        android:textSize="@dimen/todo_small_text"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/small_margin"
        android:visibility="invisible"
        android:layout_marginRight="@dimen/small_margin"
        android:textStyle="bold"
        android:clickable="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/rightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/todo_small_text"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginRight="@dimen/todo_right_margin"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true" />
</RelativeLayout>